--- a/web/package.json
+++ b/web/package.json
@@ -9,12 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@gladiaio/sdk": "^0.4.2",
     "@supabase/supabase-js": "^2.57.4",
+    "next": "15.5.3",
     "openai": "^5.22.0",
-    "redis": "^5.8.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "redis": "^5.8.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
